# monocle

./: Cargo.toml  LICENSE.md  README.md  dev.kdl
.github/workflows/: release.yml
src/: backend_workers.rs  main.rs  search_results.rs
src/ui/: controls_line.rs  loading_animation.rs  mod.rs  selection_controls_area.rs
