[package]
name = "monocle"
version = "0.39.0"
authors = ["Aram Drevekenin <aram@poor.dev>"]
edition = "2018"

[dependencies]
zellij-tile = "0.41.2"
ignore = "0.4.23"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2.0"
strip-ansi-escapes = "0.2.0"
